--- a/final/src/components/Navbar/NavBar.css
+++ b/final/src/components/Navbar/NavBar.css
@@ -1,5 +1,5 @@
-.BarButtons{
-    background: linear-gradient(90deg, rgb(0,105,62), rgb(234, 234, 247),100%);
+.NavBarLook{
+    background: linear-gradient(90deg, #00693e 0%,  #00693e  100%);
     height: 90px;
     display: flex;
     justify-content: center;
@@ -8,10 +8,20 @@
 }
 
 .suggestionLogo{
-    color: #f8f8ff;
+    color: #e9ece9;
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
+    
+}
+
+/* help from github website */
+.logoSetup{ 
+    width: 40px;
+    height: 40px;
+    border-radius: 55%;
+    overflow: hidden;
+    margin-top: auto;
 }
 
 .fa-react{
@@ -31,13 +41,23 @@
 }
 
 .nav-links{
-    color:rgb(234, 234, 247);
+    color:rgb(235, 241, 235);
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
 
+.nav-links:hover{
+    background-color: rgb(28, 78, 39);
+    border-radius: 4px;
+    transition: all 0.2s ease-out;
+}
+
 .fa-bars{
-    color: #fff;
+    color: rgb(246, 248, 246);
+}
+
+.nav-links-mobile{
+    display: none;
 }
 
 .department{
