--- a/final/src/components/Navbar/NavBar.css
+++ b/final/src/components/Navbar/NavBar.css
@@ -1,5 +1,6 @@
 .BarButtons{
-    background: linear-gradient(90deg, rgb(0,105,62), rgb(234, 234, 247),100%);
+    background: #011936;
+
     height: 90px;
     display: flex;
     justify-content: center;
@@ -54,8 +55,8 @@
         flex-direction: column;
         width: 100%;
         height: 500px;
-        position: absolute;
         top: 80px;
+        position: absolute;
         left: -100%;
         opacity: 1;
         transition: all 0.5s ease;
