--- a/final/src/components/Navbar/NavBar.css
+++ b/final/src/components/Navbar/NavBar.css
@@ -1,6 +1,6 @@
 .BarButtons{
     background: #011936;
-
+    padding-right: 16px;
     height: 90px;
     display: flex;
     justify-content: center;
@@ -19,6 +19,7 @@
     margin-left: 0.5 rem;
     font-size: 1.6 rem;
 }
+
 
 .nav-menu{
     display: grid;
@@ -52,6 +53,7 @@
 @media screen and (max-width:960px){
     .BarButtons{
         position: relative;
+        margin-right: 50px;
     }
 
     .nav-menu{
